aligned "posts" - link correctly

--- a/posts/CSS/publish.css
+++ b/posts/CSS/publish.css
@@ -1,11 +1,9 @@
-
 #write-post {
 	display: flex;
 	flex-direction: column;
 }
 
-.compose-img {
-	height: 30vh;
-	margin: .5em 0 0 1em;
-} 
-
+#main .compose-img {
+	background: url("/MMP-350/typography/blogger.jpg") no-repeat top center/cover;
+	height: 50vh;
+}
